static/css/chat.css
/**
 * Conversation window
 */

html, body {
  height: 100%; /* necessary to use display: table* on children */
  margin: 0;
  padding: 0;
}

body {
  display: table;

  /* make it possible to apply border style rules to children with
     display:table-row; */
  border-collapse: collapse;

  width: 100%;      /* display: table seems to make this required */
  min-width: 260px; /* Social API chat window default width */
}

/**
 * Common utilities
 */
.media-icon {
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: middle;
}

.video-icon {
  background: url(/img/video-icon.png) no-repeat;
}

.audio-icon {
  background: url(/img/btn-audio.png) no-repeat;
}

/**
 * Pending (i.e. offer & establish) views in the chat window
 */
.pending {
  height: 100%;
  padding: 40px 10px 0 10px;
  text-align: center;
}

.pending .avatar {
  text-align: center;
}

.pending .avatar img {
  width: 64px;
  height: 64px;
}

.pending .incoming-info {
  color: #555;
  font-size: 90%;
}

/**
 * Call controls
 */
#call-controls {
  display: table-row;
  background-color: #FAFAFA;
  width: 100%;
  height: 24px;
  margin: 0;
  padding: 0;
  list-style-type: none;
  z-index: 99;
  border-bottom: 1px solid #D6D6D6 !important;
}

#call-controls .controls {
  list-style-type: none;
  margin: 0;
}

#call-controls .controls li {
  border-right: 1px solid #d6d6d6;
  float: left;
}

#call-controls .controls li a {
  display: block;
  height: 16px;
  width: 16px;
  margin: 4px;
}

.btn-video a {
  background: url(../img/btn-video.png);
}

.btn-audio a {
  background: url(../img/btn-audio.png);
}

.btn-hangup a {
  background: url(../img/btn-hangup.png);
}

.btn-microphone-mute a {
  background: url(../img/microphone-mute.png);
}

.btn-microphone-mute.active a {
  background: url(../img/microphone.png);
}

.btn-speaker-mute a {
  background: url(../img/speaker-mute.png);
}

.btn-speaker-mute.active a {
  background: url(../img/speaker.png);
}

/**
 * Video call
 */
#call {
  display: table-row;
  height: calc(100vw / 1.33333); /* keep 4:3 video aspect ratio */
}

#call .media-display-area {
  position: relative;
  overflow: hidden;
  margin-bottom: -5px;
}

#call .remote-media {
  width: 100vw;
  min-width: 100vw;
  max-height: 80vh;
  z-index: 1;
}

/* XXX once we get the local-media stapled to the remote-media,
   much of this stuff may be irrelevant.  Audit this as part
   of that landing. */
#call .local-media {
  position: absolute;
  bottom: 10px; /* 10px seems to give stablest stapling across most sizes */
  right: 5px;
  width: 20vw;
  min-width: 80px;
  max-width: 200px;
  height: 15vw;
  min-height: 60px;
  max-height: 150px;
  z-index: 99;
  border: 1px solid #333;
  background: #ccc;
}

.ignored {
  opacity:0.5;
  transition: opacity 1s;
}

/**
 * Text chat
 */

#textchat {
  display: table-row;
  font-size: 80%;
}

#textchat ul {
  width: 100%;
  /* height: viewport height - controls height - form height */
  height: calc(100vh - 24px - 22px);
  overflow: auto;
  margin: 0;
  padding: 0;
  background: #fff;
}

#textchat ul li {
  /* XXX this box-sizing stuff is band-aiding over some other problem.
   * Remove & find/fix the root cause */
  -moz-box-sizing: border-box;
  box-sizing: border-box;

  padding: 0 5px;
  width: 100%;
}

.has-video #textchat ul {
  /* height: viewport height - video height - controls height - form height */
  height: calc((100vh - 100vw / 1.33333) - 24px - 22px);
}

#textchat form {
  display: table-row;
  height: 22px;
  width: 100vw;
  z-index: 99;
}

#textchat form input[type="text"] {
  /* XXX this box-sizing stuff is band-aiding over some other problem.
   * Remove & find/fix the root cause */
  -moz-box-sizing: border-box;
  box-sizing: border-box;

  width: 100vw;
  height: 22px;
  font-size: 11px;
  border-radius: 0;
  border-left: none;
  border-right: none;
  border-bottom: none;
  margin-bottom: 0;
  padding: 4px 4px;
}

#textchat .media-body {
  margin: 0;
  padding: 0 5px 0 30px;
}

#textchat .media-body h4 {
  margin: 0;
  padding: 0;
  font-size: 11px;
  line-height: 13px;
  font-weight: normal;
}

#textchat .media-body p {
  margin: 0;
  padding: 0;
}

#textchat .media-body .progress {
  position: relative;
  width: 100%;
  height: 16px;
}

#textchat .media-body .progress .bar {
  line-height: 14px;
}

#textchat .media-body .progress span {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 99;
  color: #fff;
  text-shadow: 0 0 2px #000000;
  font-size: 11px;
  line-height: 15px;
  text-align: center;
  width: 100%;
}

/**
 * Small height window
 */
@media screen and (max-height: 300px) {
  #call {
    height: 60vh;
  }

  #call .remote-media {
    /**
     * XXX:
     *   - we can't keep both video aspect ratio and display 3 lines of chat
     *     text, so we letterbox the video
     *   - for unknown reason the video element displays a 5px margin at the
     *     bottom, hence the computation for substracting it from target height
     */
    height: calc(60vh - 5px);
    max-height: calc(60vh - 5px);
    transform: scale(1.35);
  }

  #call .local-media {
    bottom: 5px; /* the default of 10px looks odd when the window is small */
  }

  .has-video #textchat ul {
    /* height: viewport height - video height - controls height - form height */
    height: calc(100vh - 60vh - 24px - 22px);
  }
}

/**
 * Large view
 */
@media screen and (min-width: 720px) {
  #call {
    background: #000;
    height: calc(60vh - 24px - 22px);
    text-align: center; /* cause entire media-display-area to be centered relative to
                         * to window */
  }

  #call .media-display-area {
    display: inline-block; /* table-cell would insert unwanted extra padding */
    height: 60vh;
    margin-bottom: 0;
    vertical-align: middle;
  }

  #call .local-media {
    position: static;
    background: #000;
    float: left;
    width: 50%;
    height: 100%;
    min-width: 50%;
    max-width: none;
    max-height: 60vh;
    border: none;
  }

  #call .remote-media {
    position: static;
    display: block;
    float: left;
    width: 50%;
    height: 100%;
    min-width: 50%;
    max-width: none;
    max-height: 60vh;
  }

  .has-video #textchat ul {
    /* height: viewport height - video height - controls height - form height */
    height: calc(100vh - 60vh - 24px - 22px - 5px);
  }
}

